--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
     "@vue/cli-service": "^3.9.0",
+    "prerender-spa-plugin": "^3.4.0",
+    "vue-meta-info": "^0.1.7",
     "vue-template-compiler": "^2.6.10"
   },
   "postcss": {
